--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,12 @@
 CHANGELOG.txt
 =============
 
+"version": "0.0.5",
+    Added Options parameter and implemented some facility disabling functionalities.
+    Implemented 'fn' vector to easily reuse API as a function library.
+    Implemented syncFn vector.
+    Updated README file.
+
 "version": "0.0.4",
     Implemented help examples.
     Added this changelog.
