Overridable preferences and 'defaults' option.
    Defined new Prefs object to be fullfilled with provided options and default values.
    Defined new 'defaults' perference (without default value: to be set though Options)
        It's contents will be used as defaults value for each route definition.
        Not fully functional yet. But let's define defaults.help.examples as ``"{get: [{}]}"``.
    Also added client-side preferences like jQuery path to be used in help and form views.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 CHANGELOG.txt
 =============
 
+    Overridable default preferences (thought Options object).
+    Client-side preferences like jQuery path to be used in help and form views.
+
 "version": "0.0.6",
     Tested and fixed syncFn (synchronous library access) capabilities.
     Let to use user specified Promise Engine thought Options.promiseEngine.
