--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ CHANGELOG.txt
     Clearer namming for request, response mappers and output formatter.
     Implemented authentication handling facilities.
     Small project modularization.
+    Updated and fixed (.csv is not yet implemented!) README.md.
 
 "version": "0.0.7",
     Overridable default preferences (thought Options object).
