Wrapped controller execution thought Promise.resolve() to ensure valid promise input.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 CHANGELOG.txt
 =============
 
+
+    Wrapped controller execution thought Promise.resolve() to ensure valid promise input.
+
 "version": "0.0.8",
     Clearer namming for request, response mappers and output formatter.
     Implemented authentication handling facilities.
