Allowed explicit route path specification.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,9 @@ CHANGELOG.txt
     Wrapped controller execution thought Promise.resolve() to ensure valid promise input.
     Updated README.md and doc/Manual.md.
     Small project reorganization.
+    Allowed explicit route path specification thought 'path' service specification property to avoid service name messing with complex routes.
+
+    TODO: Custom filters.
 
 "version": "0.0.8",
     Clearer namming for request, response mappers and output formatter.
