Implemented Output Filters extendability.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,14 +2,14 @@ CHANGELOG.txt
 =============
 
 
+    Implemented Output Filters extendability.
+
 "version": "0.0.9",
     Wrapped controller execution thought Promise.resolve() to ensure valid promise input.
     Updated README.md and doc/Manual.md.
     Small project reorganization.
     Allowed explicit route path specification thought 'path' service specification property to avoid service name messing with complex routes.
     BUGFIX: Fixed default request mapper (no longer ignore url parameters).
-
-    TODO: Custom filters.
 
 "version": "0.0.8",
     Clearer namming for request, response mappers and output formatter.
