--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,8 +2,10 @@ CHANGELOG.txt
 =============
 
 
+"version": "0.0.10",
     Implemented Output Filters extendability.
     Added automated filters help (thought service /help facility).
+    Updated README and doc/Manual.md
 
 "version": "0.0.9",
     Wrapped controller execution thought Promise.resolve() to ensure valid promise input.
