--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ CHANGELOG.txt
 
     Added links for each available output filter in help examples.
     Markdown syntax fixings for README.md and doc/Manual.md
+    Facilities modularization.
 
 "version": "0.0.10",
     Implemented Output Filters extendability.
