BUGFIX: Fixed wrong facility rejection handling.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ CHANGELOG.txt
     Added links for each available output filter in help examples.
     Markdown syntax fixings for README.md and doc/Manual.md
     Facilities modularization.
+    BUGFIX: Fixed wrong facility rejection handling.
 
 "version": "0.0.10",
     Implemented Output Filters extendability.
