--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ CHANGELOG.txt
     Facilities modularization.
     BUGFIX: Fixed wrong facility rejection handling.
     Common template layout for facilities.
+    BUGFIX: Fixed example with parameters links when having format extension.
 
 "version": "0.0.10",
     Implemented Output Filters extendability.
