--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,10 @@
 CHANGELOG.txt
 =============
 
+"version": "1.1.2" - Better csv and xlsx input sanity checks.
+    Improved input sanity checks for csv and xlsx output filters.
+    Removed forgiven debugging code.
+
 "version": "1.1.1" - Fixed bug getting base url for /help facility.
 
 "version": "1.1.0" - CSV and XLSX output filters.
