--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,8 @@
 CHANGELOG.txt
 =============
 
+"version": "1.1.3" - BUGFIX: Default form template didn't trigger when no specific one specified.
+
 "version": "1.1.2" - Better csv and xlsx input sanity checks.
     Improved input sanity checks for csv and xlsx output filters.
     Removed forgiven debugging code.
