--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ CHANGELOG.txt
 
     Automatically added disabling (to not send) checkbox for all inputs in form facilty.
     Better error response displaying in form facilty.
+    Show actual key in combo boxes options label in form facility.
 
 "version": "1.1.4" - BUGFIX: Fixed lack of dependency require in default response mapper introduced in modularization process.
 
