--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ CHANGELOG.txt
     Automatically added disabling (to not send) checkbox for all inputs in form facilty.
     Better error response displaying in form facilty.
     Show actual key in combo boxes options label in form facility.
+    New fake "epochdate" field type in form facility to send dates as epoch timestamp.
 
 "version": "1.1.4" - BUGFIX: Fixed lack of dependency require in default response mapper introduced in modularization process.
 
