--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,10 @@
 CHANGELOG.txt
 =============
 
+"version": "1.1.6" - Improvements for /form facility and html output filter.
     Added informational placeholder (format) and title (rfc) for "epochdate" fake field type in /form facility.
+    Html output filter now accepts Jade templates (thought tpl and/or layout Options).
+    Minor styling changes.
 
 "version": "1.1.5" - Better form fields enhancements.
     Automatically added disabling (to not send) checkbox for all inputs in form facilty.
