--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 CHANGELOG.txt
 =============
 
+    Output filters now can return promises, so their work can be achieved asynchronously.
 
 "version": "1.1.7" - Easier way to internally reuse other API services.
     Make service methods callable inside others thought this.srvName.method().
