--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,8 @@
 CHANGELOG.txt
 =============
 
+    Timeout parameter implementation.
+
 "version": "1.1.8"
     Output filters now can return promises, so their work can be achieved asynchronously.
     Multi-field labels for select options in form facility combo boxes (thought "+" separator in data-value property).
