--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,7 @@
 CHANGELOG.txt
 =============
 
-    Timeout parameter implementation.
+    Timeout parameter implementation and documentation.
 
 "version": "1.1.8"
     Output filters now can return promises, so their work can be achieved asynchronously.
