--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 CHANGELOG.txt
 =============
 
+"version": "1.2.1" - BUGFIX: Fixed cross-site restriction issue with chromium and others.
+    Included and inlined jQuery source in facilities layout to avoid many browsers security restrictions.
+
 "version": "1.2.0" - Timeout, Cleanup, and CRI.
     Timeout parameter implementation and documentation.
     Implemented Common Resources Interface (CRI).
