--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,9 @@
 CHANGELOG.txt
 =============
 
+"version": "1.2.2" - Better usability and simpler modularization.
     Usability enhancements (templating / css) in form facility.
+    Allow to provide API specification as an array of multiple groups of services for better modularization.
 
 "version": "1.2.1" - BUGFIX: Fixed cross-site restriction issue with chromium and others.
     Included and inlined jQuery source in facilities layout to avoid many browsers security restrictions.
