Updated default Request Mapper to map url parameters (":prmName") "as is" (colon-preffixed).

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,7 @@ CHANGELOG.txt
 =============
 
     Improved form facility "reset" button behaviour.
+    Updated default Request Mapper to map url parameters (":prmName") "as is" (colon-preffixed).
 
 "version": "1.2.2" - Better usability and simpler modularization.
     Usability enhancements (templating / css) in form facility.
