--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,7 @@ CHANGELOG.txt
     Implemented 'allowOverrideAllFacilities' and 'allowOverrideHelp', 'allowOverrideForm', etc... preferences.
     Accept array as path parameter to deploy same service over multiple urls.
     Implemented "allowXXXFilterOverride" and "allowAllFiltersOverride" preferences for the same purpose.
+    Better form facility usability.
 
 "version": "1.2.2" - Better usability and simpler modularization.
     Usability enhancements (templating / css) in form facility.
