--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -6,6 +6,9 @@ RELEASE NOTES:
   TO-DO: Figure out why reset button stop working after first form submit in form facility and fix it.
 
 
+"version": "1.2.3" - Bluebird promise engine, better form facility experience and more...
+-----------------------------------------------------------------------------------------
+
   DONE: Modifyed request mapper to get url parameters "as is":
     - i.e.: "/foo/:section/bar/:id" will generate ':section' and ':id' vectors in service handler input.
 
