--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 CHANGELOG.txt
 =============
 
+"version": "1.2.5" - Download capability in form facility for all available output filters.
 
 "version": "1.2.4" - Allow Jade files instead of only source strings or arrays.
 
