--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,14 @@
 CHANGELOG.txt
 =============
 
+"version": "1.2.12" - BUGFIX: Fixed Array output messing rom v.1.2.9
+    Protection against possible output filters input messing introduced in
+    v.1.2.9 broke serviches having array responses because extending non Array
+    objects with an Array doesn't result in an Array but only an object with
+    array-like keys. Now dedicated object cloning function fixes it.
+    Also in this commit, threshold for table representation of Arrays in html
+    output filter has been increased from 15 to 50 items.
+
 "version": "1.2.12" - Zebra style for tables in html output filter.
 
 "version": "1.2.11" - Prevent nulls disabling table view in html output filter.
