--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,13 @@
 CHANGELOG.txt
 =============
 
+"version": "1.3.0" - File Upload support.
+    Updated default RequestMapper to support file uploads thought express-fileupload.
+    Improved form facility to allow file uploads.
+	Intelligend (only on-demand) multipart use in form facility (backend).
+    Updated/Improved README file.
+	Added functional demo.
+
 "version": "1.2.14" - Log rejections to stderr by default.
     (Can be disabled by setting *logErrors* option to false)
 
