--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,13 @@
 CHANGELOG.txt
 =============
 
+"version": "1.3.1" -
+
+    Fixed lack of promisification in rtHandler indexer.
+    "Officially" support PATCH requests.
+    Improved form facility template.
+    Other REALLY minor changes.
+
 "version": "1.3.0" - File Upload support.
     Updated default RequestMapper to support file uploads thought express-fileupload.
     Improved form facility to allow file uploads.
