--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 CHANGELOG.txt
 =============
 
+
+"version": "1.3.2" - Improved html output filter table-like array detection.
+
 "version": "1.3.1" -
 
     Fixed lack of promisification in rtHandler indexer.
