--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,10 +2,11 @@ CHANGELOG.txt
 =============
 
 
+"version": "1.3.3" - More consistend form submission in form facility.
+
 "version": "1.3.2" - Improved html output filter table-like array detection.
 
-"version": "1.3.1" -
-
+"version": "1.3.1" - Miscellaneous improvements and fixings.
     Fixed lack of promisification in rtHandler indexer.
     "Officially" support PATCH requests.
     Improved form facility template.
@@ -14,9 +15,9 @@ CHANGELOG.txt
 "version": "1.3.0" - File Upload support.
     Updated default RequestMapper to support file uploads thought express-fileupload.
     Improved form facility to allow file uploads.
-	Intelligend (only on-demand) multipart use in form facility (backend).
+    Intelligend (only on-demand) multipart use in form facility (backend).
     Updated/Improved README file.
-	Added functional demo.
+    Added functional demo.
 
 "version": "1.2.14" - Log rejections to stderr by default.
     (Can be disabled by setting *logErrors* option to false)
