--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,14 @@
 CHANGELOG.txt
 =============
 
-"version": "1.3.4" - Express upgrade due to vulnerability fixes.
+"version": "1.4.0" - Maintinence upgrade.
+    Move from old Jade to latest Pug template engine.
+    Removed bluebird as core Promise engine.
+    Dependencies upgrade and minor fixes.
+
+"version": "1.3.7" - Fixed AuthHanler broken reference bug.
+
+"version": "1.3.6" - Express upgrade due to vulnerability fixes.
     Also two more new TODO's.
 
 "version": "1.3.5" - Minor changes.
