--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,16 @@
 CHANGELOG.txt
 =============
 
+"version": "1.4.1" - Security upgrade.
+
+    Bump lodash from 4.17.15 to 4.17.19
+
+    Bumps [lodash](https://github.com/lodash/lodash) from 4.17.15 to 4.17.19.
+    - [Release notes](https://github.com/lodash/lodash/releases)
+    - [Commits](https://github.com/lodash/lodash/compare/4.17.15...4.17.19)
+
+    Signed-off-by: dependabot[bot] <support@github.com>
+
 "version": "1.4.0" - Maintinence upgrade.
     Move from old Jade to latest Pug template engine.
     Removed bluebird as core Promise engine.
